# ODS_MLOps

./: .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  test.txt  test_environment.py  test_main.txt
.dvc/: config
.github/workflow/: github_ci.yml
.github/workflows/: python-package.yml
.ipynb_checkpoints/: ner-checkpoint.ipynb
Docker/mlflow_image/: Dockerfile
data/processed/: conll.dvc
data/raw/: .gitignore  conll.dvc
docs/: Makefile  conf.py  index.rst  make.bat
models/: tokenizer_config.json
models/epoch_1/: config.json
notebooks/: ner.ipynb
src/: config  config.py  config.yaml  params.yaml
src/data/: data_utils.py  download_raw.py  make_dataset.py  process_dataset.py
src/features/: build_features.py
src/models/: postprocess_dataset.py  process_dataset.py  train_model.py  trainer.py
workflow/: Snakefile
